# ark-guild-bot

./: .gitignore  Cargo.toml  README.md  data.db
contents/: Achates.toml  Airas Oculus.toml  Alarics Sanctuary.toml  Alberhastic.toml  Argos1.toml  Argos2.toml  Argos3.toml  Armored Nacrasena.toml  Calventus.toml  Chromanium.toml  Dark Legoros.toml  Demon Beast Canyon.toml  Flame Fox Yoho.toml  Forge of Fallen Pride.toml  Frost Helgaia.toml  Hall of the Twisted Warlord.toml  Helgaia.toml  Hildebrandt Palace.toml  Icy Legoros.toml  Igrexion.toml  Lava Chromanium.toml  Levanos.toml  Lumerus.toml  Nacrasena.toml  Necromancers Origin.toml  Night Fox Yoho.toml  Oreha Preveza.toml  Road of Lament.toml  Sea of Indolence.toml  Tranquil Karkosa.toml  Tytalos.toml  Urnil.toml  Velganos.toml  Vertus.toml
entity/: Cargo.toml
entity/src/: characters.rs  guildmates.rs  lib.rs  lobby.rs  lobby_player.rs  prelude.rs  sea_orm_active_enums.rs  servers.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220319_000001_create_lobby_tables.rs
migrations/2022-02-28-174201_create_tables/: down.sql  up.sql
src/: check.rs  database.rs  info.rs  lib.rs  listener.rs  main.rs  models.rs  schema.rs
src/commands/: characters.rs  lobby.rs  mod.rs  register.rs
src/commands/lobby/: close_lobby.rs  command.rs  context.rs  helper.rs  mod.rs  time.rs
