[package]
name = "ark-guild-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17.0", features = ["full"]}
dotenv = "0.15.0"
diesel = {version = "1.4.8", features = ["sqlite"]}
poise = {git = "https://github.com/kangalioo/poise"}