[package]
name = "ark-guild-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    ".",
    "entity",
    "migration"
]

[dependencies]
tokio = {version = "1.17.0", features = ["full"]}
dotenv = "0.15.0"
sea-orm = {version = "0.7.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = false}
poise = {git = "https://github.com/kangalioo/poise"}
chrono = "0.4.19"
entity = {path = "entity"}
migration = {path = "migration"}