[package]
name = "ark-guild-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "ark_guild_bot"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    ".",
    "entity",
    "migration"
]

[dependencies]
tokio = {version = "1.18.0", features = ["full"]}
dotenv = "0.15.0"
sea-orm = {version = "0.7.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = false}
poise = "0.1.0"
chrono = "0.4.19"
entity = {path = "entity"}
migration = {path = "migration"}
parse-display = "0.5.5"
once_cell = "1.10.0"
enum-iterator = "0.7.0"
toml = "0.5.8"
serde = "1.0.136"
parking_lot = "0.12.0"
dateparser = "0.1.6"
hashbrown = "0.12.0"
uuid = { version = "0.8.2", features = ["v4"]}