[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = {version = "0.6.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false}
poise = {git = "https://github.com/kangalioo/poise"} # For slash command choice parameter derive macro